# pyCLAD

./: .flake8  .gitignore  .readthedocs.yaml  CONTRIBUTING.md  LICENSE  README.md  mkdocs.yaml  pyproject.toml
docs/: api.md  callbacks.md  contribution.md  data.md  datasets.md  example.md  examples.md  getting_started.md  index.md  infoprovider.md  metrics.md  models.md  requirements.txt  scenarios.md  strategies.md
docs/api/: callbacks.md  data.md  metrics.md  models.md  strategies.md
examples/: autoencoder_torch_example.py  cad_cicids2017_dataset_example.py  concept_agnostic_example.py  concept_aware_example.py  concept_incremental_example.py  derpp_energy_example.py  derpp_example.py  energy_dataset_ae_neural_strategies_example.py  energy_dataset_agem_example.py  energy_dataset_ewc_example.py  energy_dataset_example.py  energy_dataset_pnn_ae_example.py  energy_timeseries_dataset_example.py  getting_started.ipynb  gru_tae_torch_example.py  gru_tvae_torch_example.py  lstm_tae_torch_example.py  lstm_tvae_torch_example.py  plot_heatmap_example.py  tcn_tae_torch_example.py  tcn_tvae_torch_example.py  timeseries_ad_example.py  unsw_dataset_example.py
examples/models/: autoencoder_torch_example.py  carla_energy_example.py  gru_tae_torch_example.py  gru_tvae_torch_example.py  lstm_tae_torch_example.py  lstm_tvae_torch_example.py  tcn_tae_torch_example.py  tcn_tvae_torch_example.py
examples/models/vision/: fastflow_torch_example.py  paste_torch_example.py  rd4ad_benchmark.py  rd4ad_torch_example.py  stfpm_torch_example.py
examples/resources/: nsl-kdd_random_anomalies_5_concepts_1000_per_cluster.npy
examples/strategies/: derpp_example.py
src/pyclad/analysis/: scenario_heatmap.py
src/pyclad/callbacks/: callback.py  composite_callback.py
src/pyclad/data/: concept.py  dataset.py  timeseries.py  vision_concept.py
src/pyclad/examples/: concept_agnostic_example.py  concept_aware_example.py  concept_incremental_example.py  output.json  plot_heatmap_example.py
src/pyclad/models/: __init__.py  feature_extractor.py  model.py  model_base.py  neural_model.py  torch_backbone.py  torch_backed_model.py
src/pyclad/output/: json_writer.py  output_writer.py  prediction_results.py
src/pyclad/scenarios/: concept_agnostic.py  concept_agnostic_scenario.py  concept_aware.py  concept_aware_scenario.py  concept_incremental.py  concept_incremental_scenario.py
src/pyclad/strategies/: neural_hooks.py  strategy.py
src/pyclad/vision/: prediction_results.py
tests/: conftest.py
tests/callbacks/: test_composite_callback.py
tests/callbacks/evaluation/: test_matrix_evaluation_callback.py  test_memory_usage_callback.py  test_vision_pixel_concept_metric_callback.py
tests/data/datasets/: concepts_dataset.py  test_concepts_dataset.py  test_energy_plants_dataset.py  test_nsl_kdd_dataset.py  test_tabular_cad_datasets.py  test_unsw_dataset.py  test_wind_energy_dataset.py
tests/data/readers/: test_concepts_readers.py  test_vision_reader.py
tests/data/vision/: test_generic_reader.py  test_vision_reader.py
tests/metrics/base/: test_average_precision.py
tests/metrics/continual/: test_average_continual.py  test_backward_transfer.py  test_forward_transfer.py
tests/metrics/vision/: test_pixel_aupro.py  test_pixel_average_precision.py  test_pixel_roc_auc.py  test_pixel_threshold_metrics.py
tests/models/: test_autoencoder_models.py
tests/models/adapters/: test_pyod_models_adapters.py
tests/models/classical/: test_isolation_forest_adapter.py  test_lof.py  test_oc_svm.py  test_utils.py
tests/models/contrastive/: test_carla.py
tests/models/vision_models/: test_paste.py
tests/strategies/architectural/: test_pnn.py
tests/strategies/baselines/: mock_model.py  (+3 more)
tests/vision/: _helpers.py
(+185 files in other folders)
